--- a/src/app/user-components/category-products/category-products.component.scss
+++ b/src/app/user-components/category-products/category-products.component.scss
@@ -1,8 +1,18 @@
-.chip-scroll-wrap::-webkit-scrollbar {
-  display: none;
+::ng-deep .p-carousel .p-carousel-item > div {
+  border: 2px solid #d1d5db; /* slate-300 por defecto */
+  border-radius: 0.75rem;     /* rounded-xl */
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); /* shadow-sm */
+  transition: all 0.2s ease-in-out;
 }
-.chip-scroll-wrap {
-  -ms-overflow-style: none; /* IE/Edge */
-  scrollbar-width: none;    /* Firefox */
-  background-color: transparent;
+
+/* Hover */
+::ng-deep .p-carousel .p-carousel-item > div:hover {
+  border-color: #34d399; /* emerald-400 */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* shadow-md */
+}
+
+/* Estado seleccionado */
+::ng-deep .p-carousel .p-carousel-item.active-category > div {
+  border-color: #10b981; /* emerald-500 */
+  background-color: #ecfdf5; /* emerald-50 */
 }
